# ananasgfx

./: .gitignore  .gitmodules  .travis.yml  AnanasGfxExamples.js  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  _android_window_8hpp_source.html  _application_8hpp_source.html  _application_manager_8hpp_source.html  _application_test_8hpp_source.html  _application_test_store_8hpp_source.html  _bitmap_8hpp_source.html  _button_8hpp_source.html  _button_blue_8hpp_source.html  _button_flat_8hpp_source.html  _button_green_8hpp_source.html  _button_red_8hpp_source.html  _camera_8hpp_source.html  _character_8hpp_source.html  _clipping_node_8hpp_source.html  _container_8hpp_source.html  _desktop_window_8hpp_source.html  _file_manager_8hpp_source.html  _font_8hpp_source.html  _font_manager_8hpp_source.html  _font_renderer_8hpp_source.html  _horizontal_linear_8hpp_source.html  _horizontal_linear_layout_8hpp_source.html  _layout_8hpp_source.html  _lazy_init_8hpp_source.html  _linear_8hpp_source.html  _linear_layout_8hpp_source.html  _list_8hpp_source.html  _list_item_8hpp_source.html  _list_item_simple_text_8hpp_source.html  _margin_8hpp_source.html  _material_design_8hpp_source.html  (+347 more)
dependencies/easy-exception/: .travis.yml  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  readme.md
dependencies/easy-exception/examples/: CustomException.cpp  DefaultConfiguration.cpp  DefaultLogging.cpp  JsonException.cpp  LoggerInheritance.cpp  SignalHandler.cpp  SimpleException.cpp  SimpleStacktrace.cpp  UncaughtException.cpp
dependencies/easy-exception/include/ee/: Exception.hpp  Helper.hpp  Log.hpp  LogEntry.hpp  LogRetentionPolicy.hpp  Logger.hpp  Note.hpp  Stacktrace.hpp  SuspendLogging.hpp
dependencies/easy-exception/src/: Exception.cpp  Helper.cpp  Log.cpp  LogEntry.cpp  LogRetentionPolicy.cpp  Logger.cpp  Stacktrace.cpp  SuspendLogging.cpp
dependencies/easy-exception/test/android/app/: CMakeLists.txt  build.gradle
dependencies/easy-exception/test/android/app/src/androidTest/java/com/pcbaecker/easyexception/: ExampleInstrumentedTest.java
dependencies/easy-exception/test/android/app/src/cpp/: android_main.cpp
dependencies/easy-exception/test/android/app/src/main/: AndroidManifest.xml
dependencies/easy-exception/test/android/app/src/main/res/values/: strings.xml
dependencies/easy-exception/test/android/app/src/test/java/com/pcbaecker/easyexception/: ExampleUnitTest.java
dependencies/easy-exception/test/android/gradle/wrapper/: gradle-wrapper.properties
dependencies/easy-exception/test/integrationtest/: CMakeLists.txt  Log.cpp  LogRetentionPolicy.cpp
dependencies/easy-exception/test/unittest/: CMakeLists.txt  Exception.cpp  Helper.cpp  Log.cpp  LogEntry.cpp  LogRetentionPolicy.cpp  Logger.cpp  Note.cpp  Stacktrace.cpp  SuspendLogging.cpp
dependencies/easy-exception/tools/: run-clang-tidy.py
docs/: CMakeLists.txt  Doxyfile.in  main.md
examples/: AnanasGfxExamples.data  AnanasGfxExamples.html  AnanasGfxExamples.js  AnanasGfxExamples.wasm  AnanasGfxExamples.wasm.map  CMakeLists.txt  Makefile  cmake_install.cmake  emscripten.sh
examples/android/app/: build.gradle
examples/android/app/src/androidTest/java/com/pcbaecker/ananasgfxexample/: ExampleInstrumentedTest.java
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: native-lib.cpp
examples/android/app/src/main/java/com/pcbaecker/ananasgfxexample/: MainActivity.java
examples/android/app/src/main/res/values/: strings.xml
examples/android/app/src/test/java/com/pcbaecker/ananasgfxexample/: ExampleUnitTest.java
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/examples/: AnanasGfxExamples.js
examples/src/: Overview.cpp
examples/src/labels/: Labels.cpp
examples/src/materialdesign/: MaterialDesign.cpp
examples/src/multiwindow/: MultiWindow.cpp
examples/src/primitives2d/: Primitives2d.cpp
examples/src/primitives3d/: Primitives3d.cpp
examples/src/rendertexture/: Rendertexture.cpp
examples/src/uiviews/: UIViews.cpp
html/: _application_8hpp_source.html  _application_store_8hpp_source.html  _application_test_8hpp_source.html  _application_test_store_8hpp_source.html  _circle_8hpp_source.html  _command_line_parameters_8hpp_source.html  _cube_8hpp_source.html  _defines_8hpp_source.html  _desktop_window_8hpp_source.html  _font_manager_8hpp_source.html  _label_8hpp_source.html  _open_gl_shader_8hpp_source.html  _p_hash_8hpp_source.html  _rectangle_8hpp_source.html  _renderer_8hpp_source.html  _scene_8hpp_source.html  _shader_8hpp_source.html  _texture_gray_alpha_shader_8hpp_source.html  _touch_8hpp_source.html  _vertex_buffer_8hpp_source.html  _window_8hpp_source.html  _window_configuration_8hpp_source.html  annotated.html  classd2_1_1_circle-members.html  classd2_1_1_circle.js  classd2_1_1_label-members.html  classd2_1_1_node-members.html  classd2_1_1_ring.html  classd2_1_1_ring.js  classd2_1_1_vertex_node-members.html  (+123 more)
test/integrationtest/: CMakeLists.txt
test/integrationtest/d2/: ChildNodes.cpp  Circle.cpp  Label.cpp  Rectangle.cpp  RectangleRoundCorner.cpp  Ring.cpp  Sprite.cpp  ZIndex.cpp
test/integrationtest/gfx/: RenderTexture.cpp  Window.cpp
test/unittest/: CMakeLists.txt  main.cpp
test/unittest/d2/: Circle.cpp  Label.cpp  Node.cpp  Rectangle.cpp  RectangleRoundCorner.cpp  Ring.cpp  Sprite.cpp  VertexNode.cpp
test/unittest/font/: Character.cpp  Font.cpp  FontManager.cpp  FontRenderer.cpp
test/unittest/gfx/: Application.cpp  ApplicationManager.cpp  Bitmap.cpp  Camera.cpp  ClippingNode.cpp  FileManager.cpp  Node.cpp  RenderTexture.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Task.cpp  Texture.cpp  TextureManager.cpp  Touch.cpp  VertexBuffer.cpp  Vertices.cpp  Window.cpp  WindowConfiguration.cpp
test/unittest/gfx/internal/: ApplicationManager.cpp  ApplicationStore.cpp
test/unittest/platform/desktop/: CommandLineParameters.cpp  DesktopWindow.cpp
test/unittest/test/: ApplicationTest.cpp  PHash.cpp  TestTasks.cpp  test.cpp
test/unittest/test/internal/: ApplicationTestStore.cpp
(+251 files in other folders)
